tests/paczka1/fuzzy1/63777941.err
Error in line 3: A658 A658 15,0
Error in line 7: EXMM A357 90,8
Error in line 10: EXMM S933 73,0
Error in line 22: EXMM S94 86,4
Error in line 24: JX5iVb A357 252,7
Error in line 37: JX5iVb S933 23,4
